# jeopardy-ws

./: .gitignore  README.md  buzzer.html  final.html  host.html  join.html  pyproject.toml  requirements.txt  server.py
css/: buzzer.css  final.css  globals.css  host.css  join.css
scripts/: buzzer.js  final.js  host.js  join.js  ws.js
