[project]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "frozenlist==1.6.0",
    "idna==3.10",
    "multidict==6.4.3",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "qrcode==8.1",
    "websockets==15.0.1",
    "yarl==1.20.0",
]
description = "Add your description here"
name = "jeopardy-ws"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
